# nuebot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  settings.json  start.bat  start_bot.py
.hermes/: PLAN.md
nuebot/: bot.py  config.py
nuebot/handlers/: buttons.py  generate.py
nuebot/jobs/: __init__.py  manager.py
nuebot/sd/: client.py
presets/: anima.json  krea2.json  plantmilk.json
resources/: r_angle.txt  r_artist.txt  r_color.txt  r_female.txt  r_male.txt  r_place.txt  r_style.txt
src/nuebot/: __init__.py  bot.py  config.py
src/nuebot/handlers/: __init__.py  buttons.py  cancel.py  generate.py
src/nuebot/jobs/: manager.py
src/nuebot/sd/: __init__.py  client.py
tests/: test_document_results.py  test_generation_settings.py  test_resource_prompts.py  test_start_bot.py
