[project]
name = "nuebot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.29.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nuebot"]
